--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /NetBeansProjects/Padaria2/target/
 /Padaria2/target/
 /NetBeansProjects/padaria/Padaria/target/
+/Nova pasta/SimuladorRPG/target/
+/SimuladorRPG/target/
