--- a/SimuladorRPG/pom.xml
+++ b/SimuladorRPG/pom.xml
@@ -5,6 +5,14 @@
     <artifactId>SimuladorRPG</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>edu.senai.Miguel</groupId>
+            <artifactId>SimuladorRPG</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
